app/assets/stylesheets/custom.scss
@import "bootstrap-sprockets";
@import "bootstrap";

/* font */
@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i');

/* universal */

body {
  padding-top: 60px;
  overflow-y: scroll;
  font-size: 0.8vw;
}

body * {
  font-family: 'Playfair Display', serif;
}

section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

.center {
  text-align: center;
}

.center h1 {
  margin-bottom: 10px;
}

/* typography */
a {
  color:rgb(185, 53, 0);

  &:visited {
    color:rgb(185, 53, 0);
  };

  &:hover {
    color: orangered;
  };
}

h1, h2, h3, h4, h5, h6 {
  line-height: 1;
  margin-top: 0px;
}

h1 {
  text-align: center;
  margin-bottom: 30px;
  font-size: 1.5vw;
}

h2 {
  margin-bottom: 25px;
  text-align: center;
  font-weight: normal;
  font-size: 1.3vw;
}

h3 {
  margin-bottom: 20px;
  text-align: center;
  font-weight: normal;
  font-size: 1.1vw;
}

p {
  line-height: 1.7em;
}

/* mixins, variables, etc. */

$gray-medium-light: #eaeaea;

@mixin box_sizing {
  -moz-box-sizing:    border-box;
  -webkit-box-sizing: border-box;
  box-sizing:         border-box;
}

/* miscellaneous */

.debug_dump {
  clear: both;
  float: left;
  width: 100%;
  margin-top: 45px;
  @include box_sizing;
}

/* general styles */

.index_action_td {
  width: 20px;
}

.index_title_div {
  text-align: left;
  display: inline-block;
  margin-left: -20px;

  a {
    font-style: italic;
    font-weight: bold;
    letter-spacing: 2pt;

    color: rgb(185, 53, 0);
    &:visited { color: rgb(185, 53, 0); }
  }
  overflow: hidden;
  border-bottom: 1px dashed #eaeaea;
}

.index_description_div {
  max-height: 70px;
  overflow: hidden;
  a {
    color: black;
    &:visited { color: black; };
  };
}

.show_header, .index_header {
  margin-bottom: 50px;
  text-align: center;
}

.show_description, .show_ingredients, .show_preparation, .show_content, .show_related {
  margin-bottom: 50px;
  h1 { text-align: left; };
}

.show_picture {
  border-width: 1px;
  border-style: inset;
  background-color: lightgray;
  margin-bottom: 10px;
  padding: 5px;
  width: 212px;
}

.show_small_picture {
  width: 50px;
  height: 100px;
  overflow: hidden;
}

.show_actions {
  margin-left: 10px;

  a {
    display: inline-block;
    vertical-align: top;
    font-size: 0.8vw;
    margin-left: 0px;
  };
}

.delete_picture {
  float: right;
}

.tag_label {
  display: inline-block;
}

.add_marked_tag_button {
  float: right;
  cursor: pointer;
}

